--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
         body {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -19,9 +20,25 @@
             color: red;
             text-shadow: 2px 2px 4px black;
         }
+        .memes {
+            margin-top: 20px;
+        }
+        img {
+            width: 200px;
+            margin: 10px;
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px black;
+        }
     </style>
 </head>
 <body>
     <h1>Если Денис ест пиццу без нас — БАН</h1>
+    <div class="memes">
+        <img src="https://via.placeholder.com/200?text=Босс+KFC" alt="Босс KFC">
+        <img src="https://via.placeholder.com/200?text=Скуф+52" alt="Скуф 52">
+        <img src="https://via.placeholder.com/200?text=Альтушка" alt="Альтушка">
+        <img src="https://via.placeholder.com/200?text=Рэпер" alt="Рэпер">
+        <img src="https://via.placeholder.com/200?text=Танос" alt="Танос">
+    </div>
 </body>
 </html>
