--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <body>
     <h1>Если Денис ест пиццу без нас — БАН</h1>
     <div class="memes">
-        <img src="https://via.placeholder.com/200?text=Босс+KFC" alt="Босс KFC">
-        <img src="https://via.placeholder.com/200?text=Скуф+52" alt="Скуф 52">
+        <img src="https://avatars.dzeninfra.ru/get-zen_doc/271828/pub_66f144d6a42b7e18403e973d_66f14526b4c6fe60c925be00/scale_1200=Босс+KFC" alt="Босс KFC">
+        <img src="https://s00.yaplakal.com/pics/pics_original/5/0/3/19119305.png" alt="Скуф 52">
         <img src="https://via.placeholder.com/200?text=Альтушка" alt="Альтушка">
         <img src="https://via.placeholder.com/200?text=Рэпер" alt="Рэпер">
         <img src="https://via.placeholder.com/200?text=Танос" alt="Танос">
