--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 <body>
     <h1>Если Денис ест пиццу без нас — БАН</h1>
     <div class="memes">
-        <img src="https://avatars.dzeninfra.ru/get-zen_doc/271828/pub_66f144d6a42b7e18403e973d_66f14526b4c6fe60c925be00/scale_1200=Босс+KFC" alt="Босс KFC">
+        <img src="https://avatars.dzeninfra.ru/get-zen_doc/271828/pub_66f144d6a42b7e18403e973d_66f14526b4c6fe60c925be00/scale_1200" alt="Босс KFC">
         <img src="https://s00.yaplakal.com/pics/pics_original/5/0/3/19119305.png" alt="Скуф 52">
-        <img src="https://via.placeholder.com/200?text=Альтушка" alt="Альтушка">
-        <img src="https://via.placeholder.com/200?text=Рэпер" alt="Рэпер">
-        <img src="https://via.placeholder.com/200?text=Танос" alt="Танос">
+        <img src="https://i.pinimg.com/236x/23/46/e0/2346e012499c1f026fe955048eda868f.jpg" alt="Альтушка">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBcTzb5VFCb8lFrGziECBIQ2oWqpOW3v--3Q&s" alt="Рэпер">
+        <img src="https://cdn-icons-png.flaticon.com/512/8068/8068204.png">
     </div>
 </body>
 </html>
